# parquet-viewer

./: .gitignore  Cargo.toml  LICENSE  MANIFEST.in  README.md  postinstall.py  pyproject.toml  requirements-dev.txt  setup.py
.cargo/: config.toml
.github/workflows/: build-rust.yml  build-wheels.yml  publish.yml
src/: main.rs
src/pv/: __init__.py
